--- a/templates/help.html
+++ b/templates/help.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Help</h4>
+                <h4 class="modal-title" id="myModalLabel">使用帮助</h4>
             </div>
             <div class="modal-body">
                 <ol>
@@ -13,7 +13,7 @@
                     <li>Select another tool to use with the left mouse button by selecting the tool button</li>
                 </ol>
                 <br>
-                This demo requires a HTLM5 browser, Google Chrome is recommended.
+                推荐使用chrome浏览器
                 <br>
             </div>
             <div class="modal-footer">
