--- a/css/cornerstoneDemo.css
+++ b/css/cornerstoneDemo.css
@@ -33,7 +33,29 @@ body {
     height:100%;
     top:0px;
     left:0px;
-    position:absolute
+    position:absolute;
+    --select-status:false;
+}
+.viewport:hover {
+    border-style:solid;
+    border-width:2px;
+    border-color: #8c8c8c;
+}
+.Data-selected {
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    position:absolute;
+    border-style:solid;
+    border-width:2px;
+    border-color: #ffff13;
+
+}
+.Data-selected:hover {
+    border-style:solid;
+    border-width:2px;
+    border-color: #ffff13;
 }
 
 .overlay {
@@ -157,4 +179,8 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 
 .dropdown-menu {
   min-width: 40px;
+}
+.ico_img{
+    width: 20px;
+    height: 20px;
 }
